# pipeline-services

./: .gitignore  AGENTS.md  CHANGELOG.md  Pipeline_Code_From_Chat.md  README-API-QUICKSTART.md  README-COND-JUMPS.md  README-DISRUPTOR-ALERT.md  README-JUMP-CLEANUP.md  README-JUMPS.md  README-METRICS.md  README-SUBCLASSING-SELF.md  README.md  SECURITY.md  TESTING.md  build.gradle  mvnw  pom.xml  settings.gradle
docs/: LLM_PipelineServices_Feature.md  PORTABILITY_CONTRACT.md  PROJECT_STATUS.md  PR_1_Rename_convert_to_maven.md  PR_2.md  PR_3.md  PR_4.md  PR_5.md  PR_6.md  PR_7.md  PR_8.md  PR_9.md  PipelineServices.md  PipelineServices_Contract_v1.yaml  RELEASING.md  chat_thread_details.md  code-review-notes.md  pipeline_services_rest_verification.md
pipeline-config/: pom.xml
pipeline-disruptor/: pom.xml
pipeline-examples/: pom.xml
pipeline-prompt/: pom.xml
pipeline-remote/: pom.xml
pipeline_services/: pixi.toml
pipelines/: normalize_name.json
src/Cpp/: CMakeLists.txt  README.md
src/Cpp/examples/: benchmark01_pipeline_run.cpp  example00_import.cpp  example01_text_clean.cpp  example02_json_loader.cpp  example03_runtime_pipeline.cpp  example04_json_loader_remote_get.cpp  example05_metrics_post_action.cpp  example06_mixed_local_remote.cpp  example07_prompt_codegen_pipeline.cpp
src/Cpp/pipeline_services/: pipeline_services.hpp
src/Cpp/pipeline_services/config/: json_loader.hpp
src/Cpp/pipeline_services/core/: metrics_actions.hpp  pipeline.hpp  pipeline_provider.hpp  registry.hpp  runtime_pipeline.hpp
src/Cpp/pipeline_services/disruptor/: engine.hpp
src/Cpp/pipeline_services/examples/: text_steps.hpp
src/Cpp/pipeline_services/prompt/: prompt.hpp
src/Cpp/pipeline_services/remote/: http_step.hpp
src/Cpp/tests/: pipeline_test.cpp
src/Python/: PORTING_NOTES.md  README.md  __init__.py  facade.py  pyproject.toml
src/Python/config/: json_loader.py
src/Python/core/: __init__.py  jumps.py  metrics.py  pipeline.py  registry.py  short_circuit.py  steps.py
src/Python/disruptor/: engine.py
src/Python/examples/: adapters_text.py  disruptor_stock_alerts_example.py  finance_steps.py  text_steps.py  typed_predicates.py
src/Python/pipeline_services/: __init__.py
src/Python/pipeline_services/config/: __init__.py  json_loader.py
src/Python/pipeline_services/core/: __init__.py  metrics_actions.py  pipeline.py  pipeline_provider.py  registry.py  runtime_pipeline.py
src/Python/pipeline_services/disruptor/: __init__.py  engine.py
src/Python/pipeline_services/examples/: __init__.py  benchmark01_pipeline_run.py  example00_import.py  example01_text_clean.py  example02_json_loader.py  example03_runtime_pipeline.py  example04_json_loader_remote_get.py  example05_metrics_post_action.py  example06_mixed_local_remote.py  example07_prompt_codegen_pipeline.py  text_steps.py
src/Python/pipeline_services/prompt/: __init__.py  prompt.py
src/Python/pipeline_services/remote/: __init__.py  http_step.py
src/Python/prompt/: prompt.py
src/Python/remote/: http_step.py
src/Python/tests/: test_core.py  test_disruptor.py  test_json_loader.py  test_pipeline.py  test_remote_http.py
src/Rust/: Cargo.toml  README.md
src/Rust/examples/: benchmark01_pipeline_run.rs  example00_import.rs  example01_text_clean.rs  example02_json_loader.rs  example03_runtime_pipeline.rs  example04_json_loader_remote_get.rs  example05_metrics_post_action.rs  example06_mixed_local_remote.rs  example07_prompt_codegen_pipeline.rs
src/Rust/examples/fixtures/: remote_hello.txt
src/Rust/src/: lib.rs
src/Rust/src/config/: json_loader.rs  mod.rs
src/Rust/src/core/: metrics_actions.rs  mod.rs  pipeline.rs  pipeline_provider.rs  registry.rs  runtime_pipeline.rs
src/Rust/src/disruptor/: engine.rs
src/Rust/src/examples/: mod.rs  text_steps.rs
src/Rust/src/prompt/: prompt.rs
src/Rust/src/remote/: http_step.rs  mod.rs
src/Rust/tests/: pipeline_test.rs
statemachine/: README.md  StateMachine.java  (+2 more)
(+350 files in other folders)
