[project]
name = "pipeline-services"
version = "0.1.0"
description = "Pipeline Services - contract-aligned Python reference port"
authors = [{ name = "Nektarios Kalogridis" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/nectario/pipeline-services"
Repository = "https://github.com/nectario/pipeline-services"
Issues = "https://github.com/nectario/pipeline-services/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
