[package]
name = "pipeline-services-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Pipeline Services - contract-aligned Rust reference port."
repository = "https://github.com/nectario/pipeline-services"

[lib]
name = "pipeline_services"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
